--- a/WeatherForecast/packages.config
+++ b/WeatherForecast/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="FireSharp" version="2.0.4" targetFramework="net48" />
   <package id="Guna.UI2.WinForms" version="2.0.3" targetFramework="net48" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net48" />
+  <package id="LiveCharts.WinForms" version="0.9.7.1" targetFramework="net48" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net48" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net48" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net48" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net48" />
