--- a/WeatherForecast/App.config
+++ b/WeatherForecast/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="WeatherForecast.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
@@ -11,4 +16,29 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <WeatherForecast.Properties.Settings>
+      <setting name="favFirstPanelLoc1" serializeAs="String">
+        <value>pokhara</value>
+      </setting>
+      <setting name="favFirstPanelLoc2" serializeAs="String">
+        <value>kathmandu</value>
+      </setting>
+      <setting name="favFirstPanelLoc3" serializeAs="String">
+        <value>lalitpur</value>
+      </setting>
+      <setting name="favFirstPanelLoc4" serializeAs="String">
+        <value>bhaktapur</value>
+      </setting>
+      <setting name="favFirstPanelLoc5" serializeAs="String">
+        <value>biratnagar</value>
+      </setting>
+      <setting name="tempratureStatusCelcius" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="tempratureStatusFahrenheit" serializeAs="String">
+        <value>False</value>
+      </setting>
+    </WeatherForecast.Properties.Settings>
+  </userSettings>
 </configuration>
