--- a/WeatherForecast/Properties/Settings.settings
+++ b/WeatherForecast/Properties/Settings.settings
@@ -1,7 +1,27 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="WeatherForecast.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="favFirstPanelLoc1" Type="System.String" Scope="User">
+      <Value Profile="(Default)">pokhara</Value>
+    </Setting>
+    <Setting Name="favFirstPanelLoc2" Type="System.String" Scope="User">
+      <Value Profile="(Default)">kathmandu</Value>
+    </Setting>
+    <Setting Name="favFirstPanelLoc3" Type="System.String" Scope="User">
+      <Value Profile="(Default)">lalitpur</Value>
+    </Setting>
+    <Setting Name="favFirstPanelLoc4" Type="System.String" Scope="User">
+      <Value Profile="(Default)">bhaktapur</Value>
+    </Setting>
+    <Setting Name="favFirstPanelLoc5" Type="System.String" Scope="User">
+      <Value Profile="(Default)">biratnagar</Value>
+    </Setting>
+    <Setting Name="tempratureStatusCelcius" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="tempratureStatusFahrenheit" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
